--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
-    "check-coverage": true,
+    "check-coverage": false,
     "extension": [
       ".ts",
       ".tsx"
